top film finish

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 </head>
 
 <body id="body" >
-  <div class="anime">
+  <div class="anime ">
       <div class="circle"></div>
   </div>
-    <div class="main__content">
+    <div class="main__content ">
         <span class="main__close icon-reg"></span>
         <div class="container">
             <form action="" class="form__main">
                 <input type="text" placeholder="search something?" class="header__input">
                 <button class="icon-reg"></button>
             </form>
-            <div class="main__block">
+            <div class="main__block ">
                <!-- сюда отрендеряться все топовые фильмы вместе с пагинацией или результаты поиска -->
             </div>
             <div class="pagination">
                 <!-- пагинация -->
             </div>
-            <div class="main__solo">
+            <div class="main__solo ">
           
             </div>
         </div>
@@ -90,7 +90,7 @@
                 <h2 class="trend__tv-title">Trending TV Shows <span class="icon-reg"></span></h2>
                 <div class="swiper-container trend__tv-slider">
                     <div class="swiper-wrapper">
-                       <div class="swiper-slide">
+                       <!-- <div class="swiper-slide">
                         <div class="movie__item">
                             <img src="images/blackEcho.png" alt="" loading="lazy">
                         </div>
@@ -119,7 +119,7 @@
                         <div class="movie__item">
                             <img src="images/blackEcho.png" alt="" loading="lazy">
                         </div>
-                       </div>
+                       </div> -->
                     </div>
                     <div class="swiper-button-next"></div>
                 </div>
