--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </h2>
                 <div class="swiper-container trend__tv-slider popular__actors-slider">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
+                        <!-- <div class="swiper-slide">
                         <div class="movie__item">
                             <img src="images/blackEcho.png" alt="" loading="lazy">
                         </div>
@@ -202,7 +202,7 @@
                         <div class="movie__item">
                             <img src="images/blackEcho.png" alt="" loading="lazy">
                         </div>
-                       </div>
+                       </div> -->
                     </div>
                     <div class="swiper-button-next"></div>
                 </div>
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="coming__soon-block">
                     <!-- рандомное изображение какого-нибудь ожидаемого фильма -->
-                    <img src="images/bigBuckBunny.png" alt="" loading="lazy">
+                    <img src="images/bigBuckBunny.png" alt="" loading="lazy" width="300px" height="400px" style="object-fit: cover;">
                     <div class="coming__block-neon">
                         <div class="coming__soon-img">
                             <p class="year">2022</p>
